Vuelve a agregar hilos.
Idea del autor:  ejecutar el programa n veces y promediar el resultado.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,7 +15,8 @@
                 "-lstdc++",
                 "-Wall",
                 "--pedantic-errors",
-                "-O0"
+                "-O0",
+                "-lpthread"
             ],
             "options": {
                 "cwd": "${workspaceFolder}"
